--- a/src/layouts/A4.astro
+++ b/src/layouts/A4.astro
@@ -18,7 +18,10 @@ const niveauLabel = fm.niveau ?? niveau ?? '';
     <title>{title}</title>
     <link rel="stylesheet" href={printA4StylesUrl} media="print" />
     <script>
-      {`window.MathJax = { tex: { inlineMath: [['$', '$'], ['\\(', '\\)']], packages: { '[+]': ['tikz'] } }, svg: { fontCache: 'global' } };`}
+      window.MathJax = {
+        tex: { inlineMath: [['$', '$'], ['\\(', '\\)']], packages: { '[+]': ['tikz'] } },
+        svg: { fontCache: 'global' },
+      };
     </script>
     <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js" defer></script>
     <script src="https://tikzjax.com/v1/tikzjax.js" defer></script>
