--- a/src/layouts/A5.astro
+++ b/src/layouts/A5.astro
@@ -23,11 +23,20 @@ const niveauLabel = fm.niveau ?? niveau ?? '';
     <link rel="stylesheet" href={printA5StylesUrl} media="print" />
     <script>
       window.MathJax = {
-        tex: { inlineMath: [['$', '$'], ['\\(', '\\)']], packages: { '[+]': ['tikz'] } },
+        tex: {
+          inlineMath: [
+            ['$', '$'],
+            ['\\(', '\\)'],
+          ],
+          packages: { '[+]': ['require'] },
+        },
         svg: { fontCache: 'global' },
+        loader: {
+          load: ['[tex]/require'],
+        },
       };
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg-full.js" defer></script>
     <script src="https://tikzjax.com/v1/tikzjax.js" defer></script>
   </head>
   <body class="layout layout-a5">
