--- a/src/styles/print-A5.css
+++ b/src/styles/print-A5.css
@@ -4,28 +4,46 @@
 }
 
 .layout-a5 {
-  padding: 0.75cm 0;
+  --page-margin: 1cm;
+  --page-width: calc(14.8cm - 2 * var(--page-margin));
+  --page-height: calc(21cm - 2 * var(--page-margin));
+  padding: 0.75cm 0.45cm;
+  margin: 0 auto;
+  width: var(--page-width);
+  min-height: var(--page-height);
+  position: relative;
+  border: 1px dashed rgba(148, 163, 184, 0.35);
+  border-radius: 0.35cm;
+  background: white;
+}
+
+.layout-a5 .layout-header,
+.layout-a5 .etiquettes-grid,
+.layout-a5 footer {
+  position: relative;
+  z-index: 1;
 }
 
 .layout-a5 .etiquettes-grid {
-  grid-template-columns: repeat(auto-fill, minmax(6.8cm, 1fr));
+  grid-template-columns: repeat(8, minmax(0, 1fr));
+  grid-auto-flow: row dense;
   gap: 0.45cm;
 }
 
-.format-1_1 {
-  min-height: 16cm;
+.layout-a5 .format-1_1 {
+  grid-column: span 8;
 }
 
-.format-1_2 {
-  min-height: 8cm;
+.layout-a5 .format-1_2 {
+  grid-column: span 4;
 }
 
-.format-1_4 {
-  min-height: 4cm;
+.layout-a5 .format-1_4 {
+  grid-column: span 2;
 }
 
-.format-1_8 {
-  min-height: 2cm;
+.layout-a5 .format-1_8 {
+  grid-column: span 1;
 }
 
 @media print {
