--- a/src/layouts/A4.astro
+++ b/src/layouts/A4.astro
@@ -16,8 +16,9 @@ const niveauLabel = fm.niveau ?? niveau ?? '';
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>{title}</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="stylesheet" href={printA4StylesUrl} media="print" />
-    <script>
+    <script is:inline>
       window.MathJax = {
         tex: {
           inlineMath: [
